[package]
name = "currency-manager"
version = "0.1.0"
edition = "2021"
authors = ["Xanthorrhizol <xanthorrhizol@proton.me>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
csv = "1.2.2"
json = "0.12.4"
reqwest = "0.11.20"
structopt = "0.3.26"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
